# campaignsim

./: CLAUDE.md  DEMO_WALKTHROUGH.md  Dockerfile  FRONTEND_BACKEND_CONTRACT.md  FRONTEND_HANDOFF.md  FRONTEND_REDESIGN_BRIEF.md  QA_CHECKLIST.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: docker-image.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  evaluation.py  graph.py  report.py  simulation.py
backend/app/models/: __init__.py  campaign.py  project.py  task.py
backend/app/services/: __init__.py  campaign_report_agent.py  campaign_tools.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  variant_runner.py  variant_scorer.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/services/kg/: __init__.py  client.py  embedder.py  extractor.py  models.py  search.py  store.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  locale.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  run_channel_simulation.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: .env.example  CampaignSim_frontend_mock_data.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: campaignApi.js  (+6 more)
locales/: en.json  languages.json
(+65 files in other folders)
